--- a/public/index.html
+++ b/public/index.html
@@ -4,9 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Captured Images</title>
+    <title>Android Cam Hacker Server</title>
     <style>
-        /* Global Styles */
         * {
             margin: 0;
             padding: 0;
@@ -27,152 +26,85 @@
             text-align: center;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
             position: sticky;
-            top: 0;
+            top: 0px;
         }
 
         h1 {
             font-size: 2.5rem;
-            margin: 0;
-            letter-spacing: 1px;
         }
 
         .container {
             display: flex;
-            flex-wrap: wrap;
-            justify-content: space-around;
+            flex-direction: column;
+            align-items: center;
             padding: 20px;
-            margin-top: 30px;
         }
 
         .latest-image,
         .all-images {
-            flex: 1 1 100%;
-            max-width: 500px;
-            margin: 15px;
+            width: 100%;
+            max-width: 700px;
+            margin: 20px 0;
             background-color: white;
+            padding: 20px;
             border-radius: 8px;
             box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
-            padding: 20px;
-            transition: transform 0.3s ease;
         }
 
         .latest-image img {
             width: 100%;
-            height: auto;
             border-radius: 8px;
-            object-fit: cover;
-        }
-
-        .image-card {
-            margin: 15px 0;
-            background-color: #fff;
-            border-radius: 8px;
-            overflow: hidden;
-            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-            transition: transform 0.3s ease;
-        }
-
-        .image-card img {
-            width: 100%;
-            height: 250px;
-            object-fit: cover;
-            transition: transform 0.3s ease;
-        }
-
-        .image-card a {
-            display: block;
-            text-decoration: none;
-            color: #007bff;
-            margin-top: 10px;
-            text-align: center;
-            font-size: 1rem;
-            padding: 5px;
-        }
-
-        .image-card:hover {
-            transform: translateY(-5px);
-        }
-
-        .image-card img:hover {
-            transform: scale(1.05);
         }
 
         .button-container {
+            margin-top: 20px;
             display: flex;
             justify-content: center;
-            gap: 20px;
-            margin-top: 20px;
+            gap: 15px;
         }
 
         button {
-            background-color: #4CAF50;
-            color: white;
-            border: none;
             padding: 10px 20px;
             font-size: 1rem;
+            color: white;
+            border: none;
             border-radius: 5px;
             cursor: pointer;
-            transition: background-color 0.3s ease;
         }
 
-        button:hover {
-            background-color: #45a049;
+        .delete-button {
+            background-color: #f44336;
         }
 
-        /* Responsive Styles */
-        @media (max-width: 768px) {
-            .container {
-                flex-direction: column;
-                align-items: center;
-            }
-
-            .latest-image,
-            .all-images {
-                max-width: 100%;
-            }
-
-            .image-card {
-                margin: 10px 0;
-            }
-
-            h1 {
-                font-size: 2rem;
-            }
+        .download-button {
+            background-color: #4CAF50;
         }
 
-        @media (max-width: 480px) {
-            h1 {
-                font-size: 1.8rem;
-            }
+        .all-images img {
+            width: 100%;
+            border-radius: 5px;
+        }
 
-            .button-container {
-                flex-direction: column;
-            }
-
-            button {
-                padding: 10px 15px;
-                font-size: 0.9rem;
-            }
+        .image-card {
+            margin-bottom: 15px;
         }
     </style>
 </head>
 
 <body>
-
     <header>
-        <h1>Android Cam Hacker</h1>
+        <h1>Android Cam Hacker Server</h1>
     </header>
 
     <div class="container">
-
         <div class="latest-image">
             <h2>Latest Image</h2>
             <div id="latestImageContainer">
                 <p>Loading latest image...</p>
             </div>
             <div class="button-container">
-                <button id="deleteLatestImage" style="display:none;">Delete Latest Image</button>
-                <button id="downloadLatestImage" style="display:none;">Download Latest Image</button>
+                <button id="deleteLatestImage" class="delete-button" style="display:none;">Delete</button>
+                <button id="downloadLatestImage" class="download-button" style="display:none;">Download</button>
             </div>
         </div>
 
@@ -182,106 +114,84 @@
                 <p>Loading all images...</p>
             </div>
         </div>
-
     </div>
 
     <script>
-        // Fetch and display the latest image
-        fetch('/latest-image')
-            .then(response => response.blob())
-            .then(imageBlob => {
-                const imageUrl = URL.createObjectURL(imageBlob);
-                const latestImageContainer = document.getElementById('latestImageContainer');
-                latestImageContainer.innerHTML = `
-                    <img src="${imageUrl}" alt="Latest Captured Image">
-                `;
-                document.getElementById('deleteLatestImage').style.display = 'inline-block';
-                document.getElementById('downloadLatestImage').style.display = 'inline-block';
-            })
-            .catch(err => {
-                console.error('Error fetching the latest image:', err);
-                document.getElementById('latestImageContainer').innerText = 'No latest image found';
-            });
+        const fetchLatestImage = () => {
+            fetch('/latest-image')
+                .then(response => {
+                    if (!response.ok) throw new Error('No image found');
+                    return response.blob();
+                })
+                .then(imageBlob => {
+                    const imageUrl = URL.createObjectURL(imageBlob);
+                    const latestImageContainer = document.getElementById('latestImageContainer');
+                    latestImageContainer.innerHTML = `<img src="${imageUrl}" alt="Latest Captured Image">`;
+                    document.getElementById('deleteLatestImage').style.display = 'inline-block';
+                    document.getElementById('downloadLatestImage').style.display = 'inline-block';
+                })
+                .catch(() => {
+                    document.getElementById('latestImageContainer').innerHTML = '<p>No image available</p>';
+                });
+        };
 
-        // Delete the latest image
-        document.getElementById('deleteLatestImage').addEventListener('click', () => {
-            fetch('/delete', {
+        const fetchAllImages = () => {
+            fetch('/latest-images')
+                .then(response => response.json())
+                .then(imagePaths => {
+                    const container = document.getElementById('allImagesContainer');
+                    container.innerHTML = imagePaths.length > 0 ? '' : '<p>No images found</p>';
+                    imagePaths.forEach(path => {
+                        const card = `
+                            <div class="image-card">
+                                <img src="${path}" alt="Captured Image">
+                                <div class="button-container">
+                                    <button class="delete-button" onclick="deleteImage('${path}')">Delete</button>
+                                </div>
+                            </div>
+                        `;
+                        container.innerHTML += card;
+                    });
+                })
+                .catch(() => {
+                    document.getElementById('allImagesContainer').innerHTML = '<p>Error loading images</p>';
+                });
+        };
+
+        const deleteImage = (path) => {
+            fetch('/delete-image', {
                 method: 'DELETE',
-            })
+                headers: { 'Content-Type': 'application/json' },
+                body: JSON.stringify({ imagePath: path })
+            }).then(response => {
+                if (response.ok) {
+                    alert('Image deleted');
+                    fetchAllImages();
+                } else {
+                    alert('Failed to delete');
+                }
+            });
+        };
+
+        document.getElementById('deleteLatestImage').addEventListener('click', () => {
+            fetch('/delete', { method: 'DELETE' })
                 .then(response => {
                     if (response.ok) {
-                        alert('Latest image deleted successfully');
-                        // Clear the displayed latest image
-                        document.getElementById('latestImageContainer').innerHTML = '';
-                        document.getElementById('deleteLatestImage').style.display = 'none';
-                        document.getElementById('downloadLatestImage').style.display = 'none';
+                        alert('Latest image deleted');
+                        fetchLatestImage();
                     } else {
-                        alert('Error deleting the image');
+                        alert('Failed to delete latest image');
                     }
-                })
-                .catch(err => {
-                    console.error('Error deleting the image:', err);
-                    alert('Error deleting the image');
                 });
         });
 
-        // Download the latest image
         document.getElementById('downloadLatestImage').addEventListener('click', () => {
-            window.location.href = '/download';  // Trigger download
+            window.location.href = '/download';
         });
 
-        // Fetch and display all images
-        fetch('/latest-images')
-            .then(response => response.json())
-            .then(imagePaths => {
-                const allImagesContainer = document.getElementById('allImagesContainer');
-                if (imagePaths.length === 0) {
-                    allImagesContainer.innerHTML = 'No images found';
-                } else {
-                    allImagesContainer.innerHTML = imagePaths.map(imagePath => {
-                        return `
-                            <div class="image-card">
-                                <img src="${imagePath}" alt="Captured Image">
-                                <a href="${imagePath}" target="_blank">View Image</a>
-                                <br>
-                                <button class="deleteImage" data-image="${imagePath}">Delete Image</button>
-                            </div>
-                        `;
-                    }).join('');
-                    // Add delete functionality to each image
-                    const deleteButtons = document.querySelectorAll('.deleteImage');
-                    deleteButtons.forEach(button => {
-                        button.addEventListener('click', (event) => {
-                            const imagePath = event.target.getAttribute('data-image');
-                            fetch(`/delete-image`, {
-                                method: 'DELETE',
-                                headers: {
-                                    'Content-Type': 'application/json',
-                                },
-                                body: JSON.stringify({ imagePath }),
-                            })
-                                .then(response => {
-                                    if (response.ok) {
-                                        alert('Image deleted successfully');
-                                        location.reload(); // Refresh the page to reflect changes
-                                    } else {
-                                        alert('Error deleting the image');
-                                    }
-                                })
-                                .catch(err => {
-                                    console.error('Error deleting the image:', err);
-                                    alert('Error deleting the image');
-                                });
-                        });
-                    });
-                }
-            })
-            .catch(err => {
-                console.error('Error fetching all images:', err);
-                document.getElementById('allImagesContainer').innerText = 'Error loading images';
-            });
+        fetchLatestImage();
+        fetchAllImages();
     </script>
-
 </body>
 
 </html>
